default powerpc64 mbufs to 512 bytes, like other 64 bit platforms. from dennis.c.ferguson@gmail.com in PR#43028.